# marketing

marketingflow/: README.md  pyproject.toml  response.json  template.md
marketingflow/src/marketingflow/: main.py
marketingflow/src/marketingflow/crews/poem_crew/: pitch_crew.py  poem_crew.py
marketingflow/src/marketingflow/crews/poem_crew/config/: agents.yaml  pitch_agent.yaml  pitch_task.yaml  tasks.yaml
