[project]
name = "marketingflow"
version = "0.1.0"
description = "marketingFlow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0",
    "mysql-connector-python>=9.3.0",
]

[project.scripts]
kickoff = "marketingflow.main:kickoff"
run_crew = "marketingflow.main:kickoff"
plot = "marketingflow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
